# Learning-Assistant

backend/: main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Answer.jsx  Home.jsx  Login.jsx  Query.jsx
