[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "google-search-results>=2.4.2",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-tavily>=0.2.10",
    "langgraph>=0.5.3",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.10",
    "youtube-transcript-api>=1.1.1",
]
